--- a/css/style.css
+++ b/css/style.css
@@ -160,6 +160,8 @@ main {
   width: calc(100% - var(--nav-sec-width));
   height: 100%;
   background-color: lightgreen;
+  position: relative;
+
 }
 .chat-section .profile-pic > img {
   border-radius: 50%;
@@ -440,4 +442,50 @@ main {
 
 .invisible {
   margin-left: 30px;
+}
+
+#startChatting{
+  font-size: 20px;
+  margin: 20px;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  font-weight: bold;
+}
+
+.addChatBtn{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background-color: #009688;
+  font-size: 50px;
+  color: white;
+  margin-top: 20px;
+
+}
+
+#smaller {
+  width: 30px;
+  height: 30px;
+  font-size: 40px;
+  margin: 0;
+  background: none;
+  color: gray;
+
+}
+
+#newChatForm{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: var(--gray-color);
+  z-index: 10000;
+}
+
+.startChatCtn{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
