--- a/css/style.css
+++ b/css/style.css
@@ -337,8 +337,8 @@ main {
   position: relative;
 }
 #dropOption {
-  top: 100px;
-  right: 200px;
+  top: 80px;
+  right: 50px;
   position: absolute;
   background-color: white;
   font-size: 12px;
@@ -481,7 +481,29 @@ main {
   height: 100%;
   background-color: var(--gray-color);
   z-index: 10000;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
+
+#newChatForm > input {
+  border: 1px solid black;
+  font-size: 20px;
+  border-radius: 5px;
+  padding: 10px;
+  margin: 10px 0;
+} 
+
+#newChatForm > .newChatBtnCtn > button{
+  background-color: #009688;
+  border-radius: 10px;
+  padding: 10px;
+  font-size: 20px;
+  margin: 10px;
+  color: white;
+}
+
 
 .startChatCtn{
   display: flex;
